--- a/VideoTheque/VideoTheque.csproj
+++ b/VideoTheque/VideoTheque.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.3.0" />
+	<PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
